--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,7 @@
   <link rel="stylesheet" href="{{ "/styles/site.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <script type="text/javascript" src="/js/buzz.min.js"></script>
+  <script type="text/javascript" src="/static/underscore-min.js"></script>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+
 </head>
