--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
 
     <div class="page-header">
-      <h1>{{site.title}} <small>Train your ear to distinguish Arabic sounds. (beta)</small></h1>
+      <h1>{{ site.title }} <small>{{ site.subtitle }}</small></h1>
     </div>
 
   </div>
