Make footer image links relative

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
         <ul class="contact-list">
           <b>Licensing</b><br/>
           <li>&copy; 2016 <a href="mailto:{{ site.email }}">Jakub Szypulka</a></li>
-          <li><a href="https://www.gnu.org/licenses/gpl.txt"><img src="/static/code.png"/></a></li>
-          <li><a href="http://creativecommons.org/licenses/by-nc/4.0/legalcode"><img src="/static/audio.png"/></a></li>
+          <li><a href="https://www.gnu.org/licenses/gpl.txt"><img src="{{ "/static/code.png" | prepend: site.baseurl }}"></a></li>
+          <li><a href="http://creativecommons.org/licenses/by-nc/4.0/legalcode"><img src="{{ "/static/audio.png" | prepend: site.baseurl }}"/></a></li>
         </ul>
       </div>
 
@@ -17,7 +17,7 @@
         <ul class="social-media-list">
           <b>Contribute</b><br/>
           code and audio
-          <li><a href="http://github.com/jaksz/tameez"><img src="/static/github.png"/></a></li>
+          <li><a href="http://github.com/jaksz/tameez"><img src="{{ "/static/github.png" | prepend: site.baseurl }}"/></a></li>
 
         </ul>
       </div>
