--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,28 +28,28 @@
     <div class="header clearfix">
 
       <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="{{ site.baseurl}}/">{{ site.title }}</a>
+        <a class="navbar-brand" href="{{site.baseurl}}/">{{ site.title }}</a>
         <ul class="nav navbar-nav">
 
           {% for node in site.pages %}
           {% if page.url == node.url %}
           <li class="nav-item active">
-            <a class="nav-link" href="{{node.url}}">{{node.title}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{site.baseurl}}/{{node.url}}">{{node.title}}<span class="sr-only">(current)</span></a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{node.url}}">{{node.title}}</a>
+            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}</a>
           </li>
           {% endif %}
           {% endfor %}
           {% for node in site.arabic %}
           {% if page.url == node.url %}
           <li class="nav-item active">
-            <a class="nav-link" href="{{node.url}}">{{node.title}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}<span class="sr-only">(current)</span></a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{node.url}}">{{node.title}}</a>
+            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}</a>
           </li>
           {% endif %}
           {% endfor %}
