--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,18 +38,18 @@
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}</a>
+            <a class="nav-link" href="{{site.baseurl}}/{{node.url}}">{{node.title}}</a>
           </li>
           {% endif %}
           {% endfor %}
           {% for node in site.arabic %}
           {% if page.url == node.url %}
           <li class="nav-item active">
-            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{site.baseurl}}/{{node.url}}">{{node.title}}<span class="sr-only">(current)</span></a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{site.baseurl}}/">{{node.title}}</a>
+            <a class="nav-link" href="{{site.baseurl}}/{{node.url}}">{{node.title}}</a>
           </li>
           {% endif %}
           {% endfor %}
