--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div class="header clearfix">
 
       <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="{{site.baseurl}}/">{{ site.title }}</a>
+        <a class="navbar-brand" href="{{site.baseurl}}">{{ site.title }}</a>
         <ul class="nav navbar-nav">
 
           {% for node in site.pages %}
