Update copyright notice

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,7 +89,7 @@
       <div class="col-lg-6">
         <p>
           <b>Licensing</b><br/>
-          &copy; 2016 <a href="mailto:{{ site.email }}">Jakub Szypulka</a> and <a href="/about">contributors</a><br/> with the following licenses:<br/>
+          &copy; 2016 <a href="mailto:{{ site.email }}">Jakub Szypulka</a> and <a href="/about">contributors</a><br/> under the following licenses:<br/>
           <a href="https://www.gnu.org/licenses/gpl.txt"><img src="{{ "/static/code.png" | prepend: site.baseurl }}"></a>
           <a href="http://creativecommons.org/licenses/by-nc/4.0/legalcode"><img src="{{ "/static/audio.png" | prepend: site.baseurl }}"/></a>
         </p>
