Fix site name in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,8 +79,8 @@
 
     <div class="row">
 
-      <div class="col-lg-12" style="text-align:center">
-        <p><b>{{ site.title }}</b> – {{ site.subtitle }}</p>
+      <div class="col-lg-12">
+        <p><b>{{ site.title }}</b><br/>{{ site.subtitle }}</p>
       </div>
     </div>
 
