--- a/_layouts/problem.html
+++ b/_layouts/problem.html
@@ -24,7 +24,7 @@ random_pronounciation_file = _.sample(random_word.pronounciations).file;
 words = words.sort()
 
 
-
+document.write('<div class="btn-group" role="group">')
 for (word in words) {
   if (words[word].spelling == random_spelling) {
     document.write('<button type="button" class="btn btn-lg btn-warning-outline" id="right_button" onclick="check_word(true)" style="font-size:300%">' + words[word].spelling + '</button> ');
@@ -32,6 +32,7 @@ for (word in words) {
     document.write('<button type="button" class="btn btn-lg btn-warning-outline" id="wrong_button" onclick="check_word(false)" style="font-size:300%">' + words[word].spelling + '</button> ');
   }
 }
+document.write('</div>')
 
 
 function check_word(result) {
